fixes case of fund cards

--- a/service.html
+++ b/service.html
@@ -1286,7 +1286,7 @@
                                             <div
                                               class="tag fs-14 fs-1919-12 fs-575-10 text-light-2"
                                             >
-                                              MONTHLY
+                                              Monthly
                                             </div>
                                           </div>
                                         </div>
@@ -1294,7 +1294,7 @@
                                           <div
                                             class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12"
                                           >
-                                            RETURNS(1Y)
+                                            Returns(1Y)
                                           </div>
                                           <div
                                             class="big-text fs-24 fs-1919-18 fs-575-14 fw-600"
@@ -1863,7 +1863,7 @@
                                           </div>
                                           <div class="big-text fs-32 fw-600">
                                             <div class="tag fs-14 text-light-2">
-                                              MONTHLY
+                                              Monthly
                                             </div>
                                           </div>
                                         </div>
