--- a/service.html
+++ b/service.html
@@ -1549,7 +1549,7 @@
                                       <slider-pips class="cute" :min="20" :max="60" :step=1 labels floats range :values="[31]"></slider-pips>
                                     </div> -->
                     <div class="msoinvestproduct">
-                      <h3 class="msoinproh">
+                      <h3 class="msoinproh step5">
                         My <span>investments</span
                         ><a data-toggle="modal" data-target="#exampleModalxpand"
                           >EXPAND VIEW</a
