fixes investments font

--- a/service.html
+++ b/service.html
@@ -1550,7 +1550,7 @@
                                     </div> -->
                     <div class="msoinvestproduct">
                       <h3 class="msoinproh step5">
-                        My <span>investments</span
+                        My <span class="fw-600">investments</span
                         ><a data-toggle="modal" data-target="#exampleModalxpand"
                           >EXPAND VIEW</a
                         >
