fixes investments font

--- a/service.html
+++ b/service.html
@@ -1857,12 +1857,14 @@
 
                                         <div class="item">
                                           <div
-                                            class="small-text text-light-2 fs-18 fs-1919-16 frequency"
+                                            class="small-text text-light-2 fs-18 fs-1919-16 fs-575-12 frequency"
                                           >
                                             Frequency
                                           </div>
                                           <div class="big-text fs-32 fw-600">
-                                            <div class="tag fs-14 text-light-2">
+                                            <div
+                                              class="tag fs-14 fs-1919-12 fs-575-10 text-light-2"
+                                            >
                                               Monthly
                                             </div>
                                           </div>
