--- a/details.html
+++ b/details.html
@@ -22,7 +22,7 @@
     <title>Details</title>
   </head>
   <body>
-    <div id="dark-overlay-dropdown"></div>
+    <div id="dark-overlay-dropdown" class="tab"></div>
     <div id="dark-overlay"></div>
 
     <section id="details">
