--- a/service.html
+++ b/service.html
@@ -1880,7 +1880,10 @@
                                             class="edit"
                                             data-toggle="modal"
                                             data-target="#exampleModaly"
-                                          ><img src="./assets/vector/redeem.svg" alt="redeem"></a>
+                                            ><img
+                                              src="./assets/vector/redeem.svg"
+                                              alt="redeem"
+                                          /></a>
                                           <!-- <a href="#"></a> -->
                                         </div>
                                       </div>
@@ -2184,9 +2187,9 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div id="dark-overlay-dropdown" class="tablet"></div>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div id="dark-overlay-dropdown" class="tablet"></div>
           <div class="modal-header">
             <button
               type="button"
