--- a/profile.html
+++ b/profile.html
@@ -284,7 +284,16 @@
                       </button>
                       <div class="d-575-none">
                         <button class="btn btn-delete d-768-none d-769-block">
-                          <img src="./assets/vector/bin.svg" alt="bin" />
+                          <img
+                            class="bin"
+                            src="./assets/vector/bin.svg"
+                            alt="bin"
+                          />
+                          <img
+                            class="bin hovered"
+                            src="./assets/vector/bin-white.svg"
+                            alt="bin"
+                          />
                         </button>
                       </div>
                     </div>
