adds bar and fixes profile page

--- a/index.html
+++ b/index.html
@@ -2283,8 +2283,10 @@
           /><img src="./assets/images/Cover_Push_auto_1920.jpg" />
         </div>
         <div class="swiper-slide">
-          <img src="./assets/vector/carousel-3-img.svg" alt="carousel-3" />
-          <img src="./assets/img/carousel-ipad.png" alt="carousel-3" />
+          <img src="./assets/vector/carousel-img-1.svg" alt="carousel-img">
+          <img src="./assets/vector/carousel-img-2.svg" alt="carousel-img">
+          <img src="./assets/vector/carousel-img-3.svg" alt="carousel-img">
+          <img src="./assets/vector/carousel-img-4.svg" alt="carousel-img">
           <div class="slide-text">
             <span class="text-yellow">How</span> <br />
             Planny <br />
