--- a/profile.html
+++ b/profile.html
@@ -276,7 +276,7 @@
                         </div>
                       </div>
                       <button
-                        class="btn btn-outlined green w-1919-80 w-768-72 h-1919-24 px-0 py-1 d-575-none"
+                        class="btn btn-outlined green w-80 w-768-72 h-1919-24 px-0 py-1 d-575-none"
                       >
                         <span class="fs-16 fs-1919-14 fs-768-12 fw-600"
                           >Verified</span
