--- a/tos.html
+++ b/tos.html
@@ -18,6 +18,11 @@
     <title>Terms Of Services</title>
   </head>
   <body>
+    <div class="progress-header">
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar" style="width: 15.2073%;"></div>
+      </div>
+    </div>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
     <nav id="navbar-sm" class="notification-navbar wide-md">
@@ -171,6 +176,7 @@
     <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
 
     <!-- --------------------------------------------- Custom scripts --------------------------------------------- -->
+    <script src="./assets/js/common.js"></script>
     <script defer src="./assets/js/select.js"></script>
   </body>
 </html>
