--- a/index.html
+++ b/index.html
@@ -2283,10 +2283,13 @@
           /><img src="./assets/images/Cover_Push_auto_1920.jpg" />
         </div>
         <div class="swiper-slide">
+          <!-- <img src="./assets/img/carousel-img-1920.jpeg" alt="carousel-img">
+          <img src="./assets/img/carousel-img-1366.jpeg" alt="carousel-img"> -->
           <img src="./assets/vector/carousel-img-1.svg" alt="carousel-img">
           <img src="./assets/vector/carousel-img-2.svg" alt="carousel-img">
           <img src="./assets/vector/carousel-img-3.svg" alt="carousel-img">
           <img src="./assets/vector/carousel-img-4.svg" alt="carousel-img">
+          <img src="./assets/img/carousel-img-0.png" alt="carousel-img">
           <div class="slide-text">
             <span class="text-yellow">How</span> <br />
             Planny <br />
